test/libsolidity/syntaxTests/natspec/docstring_author_function.sol
contract C {
    /// @author author
    function iHaveAuthor() public pure {}
}
// ----
// DocstringParsingError 6546: (17-35='/// @author author'): Documentation tag @author not valid for functions.
